<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_go_home"
        android:title="@string/back_to_home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/action_view_on_imdb"
        android:title="@string/view_on_imdb"
        app:showAsAction="never"/>

    <item android:id="@+id/action_view_facebook"
        android:title="@string/view_on_facebook"
        app:showAsAction="never"/>

    <item android:id="@+id/action_view_instagram"
        android:title="@string/view_on_instagram"
        app:showAsAction="never"/>

    <item android:id="@+id/action_view_twitter"
        android:title="@string/view_on_twitter"
        app:showAsAction="never"/>

</menu>