<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="invisible"
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/error_player"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_error"
        android:layout_width="48dp"
        android:layout_height="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/network_error_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_marginBottom="24dp"
        android:text="@string/network_error_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_retry_btn"
        android:text="@string/retry"
        android:textColor="@android:color/white" />

</LinearLayout>