<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/library_used"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:fontFamily="@font/nunito_extrabold"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/library_volley"
        android:textColorLink="@color/colorPrimaryDark"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:id="@+id/library_volley"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/library_fresco"
        android:textColorLink="@color/colorPrimaryDark"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:id="@+id/library_fresco"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />


    <TextView
        android:text="@string/library_expandableText"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/library_expandableTextView"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:text="@string/library_circleIndicator"
        android:padding="4dp"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/library_circleIndicator"
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_height="match_parent" />

</LinearLayout>